tests/baselines/reference/classAbstractSuperCalls(strict=true).errors.txt
classAbstractSuperCalls.ts(6,14): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
classAbstractSuperCalls.ts(13,26): error TS2513: Abstract method 'foo' in class 'B' cannot be accessed via super expression.
classAbstractSuperCalls.ts(13,41): error TS2513: Abstract method 'foo' in class 'B' cannot be accessed via super expression.
classAbstractSuperCalls.ts(23,14): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== classAbstractSuperCalls.ts (4 errors) ====
    class A {
        foo() { return 1; }
    }
    
    abstract class B extends A {
        abstract foo();
                 ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        bar() { super.foo(); }
        baz() { return this.foo; }
    }
    
    class C extends B {
        foo() { return 2; }
        qux() { return super.foo() || super.foo; } // 2 errors, foo is abstract
                             ~~~
!!! error TS2513: Abstract method 'foo' in class 'B' cannot be accessed via super expression.
                                            ~~~
!!! error TS2513: Abstract method 'foo' in class 'B' cannot be accessed via super expression.
        norf() { return super.bar(); }
    }
    
    class AA {
        foo() { return 1; }
        bar() { return this.foo(); }
    }
    
    abstract class BB extends AA {
        abstract foo();
                 ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        // inherits bar. But BB is abstract, so this is OK.
    }
    